--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,7 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true
+    - name: Install dependencies
+      run: bundle install --jobs 4 --retry 3
     - name: Run the default task
       run: bundle exec rake
