--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,10 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true
+    - name: Install sqlite3
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libsqlite3-dev
     - name: Install dependencies
       run: bundle install --jobs 4 --retry 3
     - name: Run the default task
