--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,11 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true
-    - name: Install sqlite3
+    - name: Install dependencies for sqlite3
       run: |
         sudo apt-get update
-        sudo apt-get install -y libsqlite3-dev
-    - name: Install dependencies
+        sudo apt-get install -y libsqlite3-dev build-essential
+    - name: Install Ruby dependencies
       run: bundle install --jobs 4 --retry 3
     - name: Run the default task
       run: bundle exec rake
