Add notifications to manager on create and destroy

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,9 @@ Style/StringLiteralsInInterpolation:
 Layout/LineLength:
   Max: 120
 
+Metrics/MethodLength:
+  Max: 16
+
 # Disable frozen string literals for lib/generators/**
 FrozenStringLiteralComment:
   Exclude:
